static_library("libhelix") {
    import("//build/lite/config/component/lite_component.gni")
    import("//build/lite/ndk/ndk.gni")
    cflags_c = [ "-std=gnu11" ] # note: you need to comment out cflags_c in //build/lite/config/BUILD.gn
    sources = [
        "mp3dec.c",
        "mp3tabs.c",
        "real/bitstream.c",
        "real/buffers.c",
        "real/dct32.c",
        "real/dequant.c",
        "real/dqchan.c",
        "real/huffman.c",
        "real/hufftabs.c",
        "real/imdct.c",
        "real/polyphase.c",
        "real/scalfact.c",
        "real/stproc.c",
        "real/subband.c",
        "real/trigtabs.c"
    ]
    include_dirs = [
        "pub"
    ]
}